[project]
name = "python-playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brian Le", email = "minh100@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.5.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_playground"]

[tool.rye.scripts]
format = "ruff format"
lint = "ruff check"
test = "pytest"
